--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -13,6 +13,7 @@
     "sourceApiVersion": "51.0",
     "packageAliases": {
         "Record Shop": "0Ho09000000Gme6CAC",
-        "Record Shop@0.1.0-1": "04t09000000J05EAAS"
+        "Record Shop@0.1.0-1": "04t09000000J05EAAS",
+        "Record Shop@0.1.0-2": "04t09000000J0dOAAS"
     }
 }
