Visitor permissions extension

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -14,6 +14,7 @@
     "packageAliases": {
         "Record Shop": "0Ho09000000Gme6CAC",
         "Record Shop@0.1.0-1": "04t09000000J05EAAS",
-        "Record Shop@0.1.0-2": "04t09000000J0dOAAS"
+        "Record Shop@0.1.0-2": "04t09000000J0dOAAS",
+        "Record Shop@0.1.0-3": "04t09000000J1BTAA0"
     }
 }
