Bulkification of the callout to the generator

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -16,6 +16,8 @@
         "Record Shop@0.1.0-1": "04t09000000J05EAAS",
         "Record Shop@0.1.0-2": "04t09000000J0dOAAS",
         "Record Shop@0.1.0-3": "04t09000000J1BTAA0",
-        "Record Shop@0.1.0-4": "04t09000000J1BYAA0"
+        "Record Shop@0.1.0-4": "04t09000000J1BYAA0",
+        "Record Shop@0.1.0-5": "04t09000000J2LRAA0",
+        "Record Shop@0.1.0-6": "04t09000000J2LWAA0"
     }
 }
