Multiple optimizations for stable version

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "path": "record-shop",
             "default": true,
             "package": "Record Shop",
-            "versionName": "ver 0.1",
-            "versionNumber": "0.1.0.NEXT"
+            "versionName": "ver 1.1",
+            "versionNumber": "1.1.0.NEXT"
         }
     ],
     "namespace": "",
@@ -18,6 +18,11 @@
         "Record Shop@0.1.0-3": "04t09000000J1BTAA0",
         "Record Shop@0.1.0-4": "04t09000000J1BYAA0",
         "Record Shop@0.1.0-5": "04t09000000J2LRAA0",
-        "Record Shop@0.1.0-6": "04t09000000J2LWAA0"
+        "Record Shop@0.1.0-6": "04t09000000J2LWAA0",
+        "Record Shop@0.1.0-7": "04t09000000NAZKAA4",
+        "Record Shop@0.1.0-9": "04t09000000NAZoAAO",
+        "Record Shop@1.0.0-1": "04t09000000NAe1AAG",
+        "Record Shop@1.0.0-2": "04t09000000NAe6AAG",
+        "Record Shop@1.1.0-1": "04t09000000NAeBAAW"
     }
 }
